added dropdown shortcode

--- a/custom/assets/flags.scss
+++ b/custom/assets/flags.scss
@@ -60,8 +60,8 @@
   background-image: url(./flags-4x3/aq.svg);
 }
 
-.fi-ar {
-  background-image: url(./flags-4x3/ar.svg);
+.fi-hy {
+  background-image: url(./flags-4x3/hy.svg);
 }
 
 .fi-as {
@@ -376,6 +376,7 @@
   background-image: url(./flags-4x3/gq.svg);
 }
 
+.fi-el,
 .fi-gr {
   background-image: url(./flags-4x3/gr.svg);
 }
@@ -1020,7 +1021,7 @@
   background-image: url(./flags-4x3/zw.svg);
 }
 
-.fi-arab {
+.fi-ar {
   background-image: url(./flags-4x3/arab.svg);
 }
 
