--- a/custom/assets/public.sass
+++ b/custom/assets/public.sass
@@ -50,6 +50,14 @@
   list-style-type: none
   color: var(--text, #222)
 
+  &.has-columns-2
+    display: flex
+    flex-wrap: wrap
+    width: 200%
+
+    li
+      width: 50%
+
   .is-style-popup &
     visibility: hidden
     opacity: 0
