--- a/custom/reusable-blocks/editor.sass
+++ b/custom/reusable-blocks/editor.sass
@@ -20,6 +20,7 @@ label.bogopx-reusable-label
   box-shadow: var(--shadow1)
 
   font-size: var(--sFontSize)
+  color: var(--text)
 
   .flag
     width: 1.25rem
