--- a/custom/language-switcher/public.sass
+++ b/custom/language-switcher/public.sass
@@ -72,6 +72,7 @@
     border-radius: 0.5rem
     box-shadow: 0 1.5px 4px rgba(0,0,0, .24), 0 1.5px 6px rgba(0,0,0, .12)
     padding: 0.5rem 0
+    min-width: 12.5rem
 
     &::before
       content: "WEBSITE LANGUAGE"
