Squashed commit of the following:
commit 9027549228086514bc28d7dfb586264d51c8a487
Author: Henner S <henner.renardi@gmail.com>
Date:   Fri Aug 22 18:05:51 2025 +0700

    Changed the deprecated TSF filter

commit a19da0a34862ff41342fb6acff33be8e63944c81
Author: Henner S <henner.renardi@gmail.com>
Date:   Fri Aug 22 16:21:17 2025 +0700

    4.10.1

    - Added integration with The SEO Framework to fix the homepage's Title and Description.
    - Fixed user accessible locales not showing the correct setting.

commit b65d0fe55f6c8ccad43440fb84bb74369866cbef
Author: Henner S <henner.renardi@gmail.com>
Date:   Thu Aug 14 11:29:58 2025 +0700

    Fixed hreflang showing draft page

commit 547f1c8ee4b6625a68275bdd7d3f275ad7dfbad1
Author: Henner S <henner.renardi@gmail.com>
Date:   Wed Aug 13 17:49:39 2025 +0700

    Update acf.php

commit 4e2eae1665bf2c1c0a9a23419b4153c3904d0c77
Author: Henner S <henner.renardi@gmail.com>
Date:   Wed Aug 13 17:07:10 2025 +0700

    Fixed the helpers

commit 055b9273e858ec5790ca81213d1137abbb2e25f9
Author: Henner S <henner.renardi@gmail.com>
Date:   Wed Aug 13 15:52:27 2025 +0700

    added cache to global link groups

commit 068dec99fc4cb911025aa59b014de46196c32c08
Author: Henner S <henner.renardi@gmail.com>
Date:   Thu Jul 10 22:34:06 2025 +0700

    4.9.6

    Fixed the widgets visibility

commit 44ae533dc84388642af6f1f25a2e74885b376809
Author: Henner S <henner.renardi@gmail.com>
Date:   Thu Jul 3 21:15:46 2025 +0700

    4.9.5

    - Show 404 when visiting locale page that doesn't exist, previously just blank page.
    - Added new helper `Bogo::get_switcher_links()` to get all the menu items

commit 40a9d136c6bae8c7cada234100f51943b3d0f40e
Author: Henner S <henner.renardi@gmail.com>
Date:   Thu Jul 3 10:06:41 2025 +0700

    4.9.4

    - Fixed Reusable block showing error when there's no translation

commit 50c4df44cb68218720dc255efa0871711e196bb0
Author: Henner S <henner.renardi@gmail.com>
Date:   Wed Jul 2 22:10:41 2025 +0700

    Update

--- a/custom/language-switcher/public.sass
+++ b/custom/language-switcher/public.sass
@@ -56,9 +56,16 @@
     display: flex
     flex-wrap: wrap
     width: 200%
-
     li
       width: 50%
+
+  @media ($above-s)
+    &.has-columns-3
+      display: flex
+      flex-wrap: wrap
+      width: 300%
+      li
+        width: 33.33%
 
   .is-style-popup &
     visibility: hidden
